developer first commit

--- a/index.html
+++ b/index.html
@@ -9,4 +9,15 @@ echo "Hello World!";
 ?> 
 
 </body>
+</html><!DOCTYPE html>
+<html>
+<body>
+
+<h1>Developer PHP</h1>
+
+<?php
+echo "Hello World!";
+?> 
+
+</body>
 </html>
